added /v1/tokens/refresh METHOD
