# docs/swagger.yaml
@@ -6,6 +6,21 @@ definitions:
         example: 123456
         type: integer
     type: object
+  handlers.LoginRequestBody:
+    properties:
+      email:
+        example: example@gmail.com
+        type: string
+      password:
+        example: P@ssw0rd
+        type: string
+    type: object
+  handlers.RefreshTokenRequestBody:
+    properties:
+      refresh_token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+        type: string
+    type: object
   handlers.RegistrationRequestBody:
     properties:
       email:
@@ -21,6 +36,15 @@ definitions:
       error:
         type: boolean
       message:
+        type: string
+    type: object
+  handlers.TokensResponseBody:
+    properties:
+      access_token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
+        type: string
+      refresh_token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
         type: string
     type: object
   models.Comment:
@@ -73,6 +97,12 @@ paths:
       consumes:
       - application/json
       - text/xml
+      parameters:
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -90,6 +120,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -110,6 +144,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -120,6 +159,10 @@ paths:
             $ref: '#/definitions/handlers.Response'
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -139,6 +182,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -154,6 +202,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -173,6 +225,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -188,6 +245,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -207,6 +268,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -224,6 +290,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
         "404":
           description: Not Found
           schema:
@@ -236,6 +306,12 @@ paths:
       consumes:
       - application/json
       - text/xml
+      parameters:
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -253,6 +329,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -273,6 +353,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -288,6 +373,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -307,6 +396,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -322,6 +416,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -341,6 +439,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -356,6 +459,10 @@ paths:
               type: object
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/handlers.Response'
         "404":
@@ -375,6 +482,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       - application/xml
@@ -392,6 +504,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
         "404":
           description: Not Found
           schema:
@@ -399,6 +515,42 @@ paths:
       summary: create post by ID
       tags:
       - posts
+  /tokens/refresh:
+    post:
+      consumes:
+      - application/json
+      - text/xml
+      parameters:
+      - description: raw request body, should contain Refresh Token
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.RefreshTokenRequestBody'
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - application/xml
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      summary: refresh pair JWT tokens
+      tags:
+      - users
   /users/confirmation:
     post:
       consumes:
@@ -428,6 +580,79 @@ paths:
           schema:
             $ref: '#/definitions/handlers.Response'
       summary: confirm registration/reset password with 6-digit code from email/sms
+      tags:
+      - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      - text/xml
+      description: |-
+        Password should contain:
+        - minimum of one small case letter
+        - minimum of one upper case letter
+        - minimum of one digit
+        - minimum of one special character
+        - minimum 8 characters length
+      parameters:
+      - description: raw request body
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.LoginRequestBody'
+      produces:
+      - application/json
+      - application/xml
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handlers.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/handlers.TokensResponseBody'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      summary: login user by credentionals
+      tags:
+      - users
+  /users/logout:
+    post:
+      consumes:
+      - application/json
+      - text/xml
+      parameters:
+      - description: should contain Access Token, with the Bearer started
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      - application/xml
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      summary: logout user
       tags:
       - users
   /users/registration:
