# internal/handlers/comments.go
@@ -16,8 +16,10 @@ import (
 // @Accept  xml
 // @Produce application/json
 // @Produce application/xml
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
 // @Success 200 {object} Response{data=[]models.Comment}
 // @Failure 400 {object} Response
+// @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Router /comments [get]
 func (h *BaseHandler) ReadComments(c echo.Context) error {
@@ -47,8 +49,10 @@ func (h *BaseHandler) ReadComments(c echo.Context) error {
 // @Produce application/json
 // @Produce application/xml
 // @Param	id	path	int	true "Comment ID"
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
 // @Success 200 {object} Response{data=models.Comment}
 // @Failure 400 {object} Response
+// @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Router /comments/{id} [get]
 func (h *BaseHandler) ReadComment(c echo.Context) error {
@@ -85,8 +89,10 @@ func (h *BaseHandler) ReadComment(c echo.Context) error {
 // @Produce application/json
 // @Produce application/xml
 // @Param	id	path	int	true "Comment ID"
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
 // @Success 200 {object} Response{data=models.Comment}
 // @Failure 400 {object} Response
+// @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Router /comments/{id} [post]
 func (h *BaseHandler) CreateComment(c echo.Context) error {
@@ -143,8 +149,10 @@ func (h *BaseHandler) CreateComment(c echo.Context) error {
 // @Produce application/json
 // @Produce application/xml
 // @Param	id	path	int	true "Comment ID"
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
 // @Success 200 {object} Response{data=models.Comment}
 // @Failure 400 {object} Response
+// @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Router /comments/{id} [patch]
 func (h *BaseHandler) UpdateComment(c echo.Context) error {
@@ -208,8 +216,10 @@ func (h *BaseHandler) UpdateComment(c echo.Context) error {
 // @Produce application/json
 // @Produce application/xml
 // @Param	id	path	int	true "Comment ID"
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
 // @Success 200 {object} Response
 // @Failure 400 {object} Response
+// @Failure 401 {object} Response
 // @Failure 404 {object} Response
 // @Router /comments/{id} [delete]
 func (h *BaseHandler) DeleteComment(c echo.Context) error {
