# internal/handlers/logout.go
@@ -9,7 +9,20 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// Logout godoc
+// @Summary logout user
+// @Tags users
+// @Accept  json
+// @Accept  xml
+// @Produce application/json
+// @Produce application/xml
+// @Param Authorization header string true "should contain Access Token, with the Bearer started"
+// @Success 202 {object} Response
+// @Failure 400 {object} Response
+// @Failure 401 {object} Response
+// @Router /users/logout [post]
 func (h *BaseHandler) Logout(c echo.Context) error {
+	// recieve AccessToken Claims from context middleware
 	accessTokenClaims, ok := c.Get("user").(*models.AccessTokenClaims)
 	if !ok {
 		err := errors.New("token is untracked")
